# BasicCppLibrary

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  gcc-toolchain.cmake  generate_vs_sln.bat  generate_vs_sln.sh  run_tests.bat  run_tests.sh
.github/: CODEOWNERS
.github/workflows/: CI.yml
BasicCppLibrary/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BasicCppDemo.vcxproj  BasicCppDemo.vcxproj.filters  BasicCppLibrary.VC.db  BasicCppLibrary.cpp  BasicCppLibrary.sln  BasicCppLibrary.vcxproj  BasicCppLibrary.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  LibTest.vcxproj  LibTest.vcxproj.filters  LibTest[1]_include.cmake  LibTest[1]_tests.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ReadMe.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  stdafx.h
BasicCppLibrary/header/: BasicAlgorithm.h  BasicChrono.h  BasicConcurrency.h  BasicEnum.h  BasicGlobal.h  BasicMath.h  BasicMemory.h  BasicRegex.h  stdafx.h
BasicCppLibrary/include/: BasicAlgorithm.h  BasicChrono.h  BasicConcurrency.h  BasicEnum.h  BasicMemory.h
BasicCppLibrary/source/: BasicCppLibrary.cpp  stdafx.cpp
BasicCppLibrary/test/: TestChrono.cpp  TestMemory.cpp  TestRegex.cpp
include/: BasicAlgorithm.h  BasicArenaAllocator.h  BasicCache.h  BasicChrono.h  BasicConcurrency.h  BasicEnum.h  BasicGlobal.h  BasicMath.h  BasicMemory.h  BasicRegex.h  BasicString.h
source/: BasicAlgorithm.cpp  BasicArenaAllocator.cpp  BasicCache.cpp  BasicChrono.cpp  BasicConcurrency.cpp  BasicCppLibrary.cpp  BasicCppSample.cpp  BasicEnum.cpp  BasicMath.cpp  BasicMemory.cpp  BasicRegex.cpp  BasicString.cpp
test/: TestAlgorithm.cpp  TestArenaAllocator.cpp  TestCache.cpp  TestConcurrency.cpp  TestEnum.cpp  TestMath.cpp  TestMemory.cpp  TestRegex.cpp  TestString.cpp
